# leetcode

./: .coveragerc  .flake8  .gitlint  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  checks.sh  docker-compose.debug.yml  main.md  notebook.ipynb  notebook.md  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements.txt  setup.cfg  snippets.txt  style.sh  tests copy.sh  tests.sh  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/linters/: .python-lint
.github/workflows/: checks.yml  lint.yml  main.yml
3sum/: three_sum.py
archive/3sum-closest/: README.md  test_three_sum_closest.py  three_sum_closest.py
archive/4Sum/: README.md  four_sum.py  test_four_sum.py
archive/add-binary/: README.md
archive/add-two-numbers/: pyproject.toml  test_add_two_numbers.py
archive/binary-tree-inorder-traversal/: binary_tree_inorder_traversal.py
archive/combination-sum/: README.md  test_combination_sum.py
archive/combination-sum-ii/: combination_sum_ii.py
archive/combinations/: README.md  test_combinations.py
archive/container-with-most-water/: pyproject.toml
archive/container-with-most-water/tests/: test_Solution.py
archive/count-and-say/: README.md  count_and_say.py
archive/divide-two-integers/: README.md  divide_two_integers.py  pyproject.toml  test_divide_two_integers.py
archive/edit-distance/: README.md  edit_distance.py
archive/find-first-and-last-position-of-element-in-sorted-array/: find_first_and_last_position_of_element_in_sorted_array.py
archive/find-the-index-of-the-first-occurrence-in-a-string/: README.md  find_the_index_of_the_first_occurrence_in_a_string.py  test_find_the_index_of_the_first_occurrence_in_a_string.py
archive/first-missing-positive/: README.md  first_missing_positive.py  test_first_missing_positive.py
archive/generate-parentheses/: README.md  pyproject.toml.txt  test_generate_parentheses.py
archive/gray-code/: gray_code.py
archive/group-anagrams/: README.md  group_anagrams.py  test_group_anagrams.py
archive/insert-interval/: insert_interval.py
archive/integer-to-roman/: integer_to_roman.py  prompts.md  pyproject.toml  test_integer_to_roman.py
archive/interleaving-string/: interleaving_string.py  test_nterleaving_string.py
archive/jump-game/: README.md  test_jump_game.py
archive/jump-game-ii/: README.md
archive/largest-rectangle-in-histogram/: largest_rectangle_in_histogram.py  test_largest_rectangle_in_histogram.py
archive/length-of-last-word/: README.md  length_of_last_word.py
archive/letter-combinations-of-a-phone-number/: README.md
archive/longest-common-prefix/: README.md  pyproject.toml  test_longest_common_prefix.py
archive/longest-palindromic-substring/: pyproject.toml.txt
archive/longest-substring-without-repeating-characters/: README.md  longest_substring_without_repeating_characters.py
archive/longest-valid-parentheses/: README.md  longest_valid_parentheses.py
archive/maximal-rectangle/: maximal_rectangle.py
archive/maximum-subarray/: README.md  maximum_subarray.py  test_maximum_subarray.py
archive/median-of-two-sorted-arrays/: median_of_two_sorted_arrays.py  pyproject.toml  test_median_of_two_sorted_arrays.py
archive/merge-intervals/: README.md  test_merge_intervals.py
archive/merge-k-sorted-lists/: test_merge_k_sorted_lists.py
archive/merge-sorted-array/: README.md  test_merge_sorted_array.py
archive/merge-two-sorted-lists/: README.md  merge_two_sorted_lists.py
archive/minimum-path-sum/: README.md  minimum_path_sum.py
archive/minimum-window-substring/: README.md
archive/n-queens/: README.md  n_queens.py
archive/next-permutation/: README.md  next_permutation.py
archive/palindrome-number/: README.md  palindrome_number.py  pyproject.toml.txt  test_palindrome_number.py
archive/string-to-integer-atoi/: pyproject.toml
archive/string-to-integer-atoi/string_to_integer_atoi/: Solution.py.txt
archive/string-to-integer-atoi/tests/: test_Solution.py.txt
find-the-index-of-the-first-occurrence-in-a-string/: pyproject.toml
leetcode/: add_two_numbers.py
letter-combinations-of-a-phone-number/: pyproject.toml
letter-combinations-of-a-phone-number/letter_combinations_of_a_phone_number/: Solution.py
merge-two-sorted-lists/: pyproject.toml
regular-expression-matching/: pyproject.toml
remove-duplicates-from-sorted-array/: pyproject.toml
remove-element/: pyproject.toml
reverse-nodes-in-k-group/: pyproject.toml
src/: README.ipynb  README.md  answers.md  notebook.ipynb  requirements.txt
substring-with-concatenation-of-all-words/: pyproject.toml
tests/: test_add_two_numbers.py  test_two_sum.py
three-sum-closest/: pyproject.toml
zigzag-conversion/: pyproject.toml
(+697 files in other folders)
