[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["datttrian <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
pylint = "^2.17.5"
pylint-pytest = "^1.1.2"
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
flake8-commas = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^1.7.2"
flake8-quotes = "^3.3.2"
flake8-broken-line = "^1.0.0"
mypy = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages]
disable = ["R0903", "C0114", "C0115", "C0103", "C0116"]
