[tool.poetry]
name = "find-the-index-of-the-first-occurrence-in-a-string"
version = "0.1.0"
description = ""
authors = ["datttrian <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
