[tool.poetry]
name = "letter-combinations-of-a-phone-number"
version = "0.1.0"
description = ""
authors = ["Dat Tran <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
