[tool.poetry]
name = "regular-expression-matching"
version = "0.1.0"
description = ""
authors = ["Dat T. Tran <datttrian@gmail.com>"]
readme = "README.md"
packages = [{include = "regular_expression_matching"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
