[tool.poetry]
name = "substring-with-concatenation-of-all-words"
version = "0.1.0"
description = ""
authors = ["datttrian <datttrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
