[tool.poetry]
name = "longest-common-prefix"
version = "0.1.0"
description = ""
authors = ["Dat T. Tran <datttrian@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_common_prefix"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
